Remove most mentions of this being for a wedding

--- a/app/views/admin_mailer/rsvp_confirmation.html.slim
+++ b/app/views/admin_mailer/rsvp_confirmation.html.slim
@@ -2,4 +2,4 @@ p = "Youʼve received a new RSVP from #{@guest.name}!"
 
 p = "You can view their details at #{ENV['APP_URL']}/admin/guests/#{@guest.id}"
 
-p - Love, WeddingBot 🤖
+p - Love, RépondezBot 🤖
