Fix mix-up with domain/url

--- a/app/views/rsvp/success.html.slim
+++ b/app/views/rsvp/success.html.slim
@@ -21,4 +21,4 @@ div.Layout
     p
       | The Bride and Groom
 
-  a.Button href="https://#{ENV['APP_DOMAIN']}" Return to the main website
+  a.Button href="#{ENV['APP_URL']}" Return to the main website
